# pybind11

py_embed_threads_demo/: CMakeLists.txt
py_embed_threads_demo/python/: my_module.py
py_embed_threads_demo/src/: PythonCaller.cpp  PythonCaller.h  main.cpp
